assets/styles/_base.scss
@use 'constants' as c;

:root {
    max-width: 100vw;
    overflow-x: hidden;

    //dark mode
    &.dark {
        //invert 
        filter: invert(100%);
        -webkit-font-smoothing: antialiased;
        -moz-osx-font-smoothing: grayscale;
        background: black;
        color: black;


        &>body>div#__nuxt {

            &>div,
            &>main {
                min-height: 100%;
                min-height: 100vh;
                background: white;
            }
        }

        .vel-modal,
        .noinvert,
        .ck-editor__main, .dt-button-background, .dataTable {
            filter: invert(100%);
            color: white;
        }
        .dt-input {
            --dt-html-background: #dddddd
        }
        div.dt-button-collection {
            background: white;
        }

        textarea {
            filter: invert(100%);
            background: black;
            color: white;

            &:not(.editable) {
                border: 1px solid white;
            }
        }

        .text-invert {
            filter: invert(100%);
            color: white;

            a {
                filter: invert(100%);
            }
        }
    }
}

@media (pointer: coarse),
(hover: none) {
    [title] {
        anchor-name: --title-anchor;
        position: relative;

        &:focus,
        &:focus-within,
        &:hover {
            &::after {
                font-size: 1rem;
                content: attr(title);
                position: absolute;
                position-anchor: --title-anchor;
                top: 90%;
                z-index: 1000;
                position-area: bottom center;
                position-visibility: always;
                overflow: hidden;
                color: #000;
                background-color: #fff;
                border-radius: 4px;
                border: 1px solid;
                width: fit-content;
                padding: 6px;
            }
        }
    }
}

body {
    margin: 0;
}

main {
    padding-bottom: 4rem;
    transition: background 1s;
}

* {
    box-sizing: border-box;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

a, .a {
    background: c.$link-background;
    color: inherit;

    text-decoration: none;
    transition: background ease .15s;

    &:focus {
        background: rgba($color: c.$link-background, $alpha: 0.09);
        outline: 1px solid yellow;
        outline-offset: -1px;
    }

    &:hover {
        background: rgba($color: c.$link-background, $alpha: 0.15)
    }
}

article,
.article {
    padding: 1rem;
    max-width: 800px;
    margin: auto;

    div a {
        color: c.$link;
    }
}

.muted {
    opacity: .5
}

.muted-2 {
    opacity: .25
}

code {
    background: #f4f4f4;
    padding: .4rem;
    border-radius: .4rem;
    font-family: c.$code-font;
    font-size: .9rem;
}

.error {
    color: red
}

kbd {
    background: #000000a6;
    border-radius: .4rem;
    padding: .1rem .2rem;
    color: white;
}

.p {
    margin-block-start: 1em;
    margin-block-end: 1em;
}

